--- a/css/estilo.css
+++ b/css/estilo.css
@@ -117,3 +117,44 @@ header {
 }
 
 /*? ---------------------------------------------------------------------------------------------------------*/
+/*! Estilos Servicios */
+
+.section-servicios, 
+.section-amenities {
+  background-color: #224535;
+  color: #fff;
+  padding: 20px;
+  margin-top: 30px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+    height: 100%;
+    background-color: #ecbd5e;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  transition: 0.8s ease;
+}
+
+.card img {
+  width: 80px;
+}
+
+.card:hover img {
+  transform: scale(1.3);
+  transition: 0.8s ease;
+}
+
+.card-title {
+  font-weight: bold;
+}
+
+/*? ---------------------------------------------------------------------------------------------------------*/
