--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,7 +29,7 @@ header {
 .navbar-toggler-icon,
 .navbar-toggler {
   background-color: white;
-  color: #ecbd5e;
+  color: #f17713;
 }
 
 .nav-link {
@@ -39,7 +39,7 @@ header {
 
 .nav-link:hover {
   transition: 0.5s;
-  color: #ecbd5e;
+  color: #f17713;
 }
 
 .logo {
@@ -53,7 +53,7 @@ header {
 /*! Estilos FOOTER */
 .footer {
   background-color: #224535;
-  color: #ecbd5e;
+  color: #f17713;
   padding: 10px;
 }
 
@@ -75,7 +75,7 @@ header {
 }
 
 .footer .social-icons a {
-  color: #ecbd5e;
+  color: #f17713;
   font-size: 28px;
   margin: 5px 20px;
 }
@@ -94,7 +94,7 @@ header {
 }
 
 .formulario {
-  color: #ecbd5e;
+  color: #f17713;
   width: 800px;
 }
 
@@ -104,13 +104,13 @@ header {
 }
 
 .formulario button {
-  background-color: #ecbd5e;
+  background-color: #f17713;
   font-weight: 500;
   font-size: 18px;
 }
 
 .formulario button:hover {
-  background-color: #ecbd5e;
+  background-color: #f17713;
   color: #fff;
   transition: 0.5s;
   transform: scale(1.1);
@@ -122,7 +122,7 @@ header {
 .section-servicios,
 .section-amenities {
   background-color: #224535;
-  color: #ecbd5e;
+  color: #f17713;
   padding: 20px;
   margin-top: 30px;
 }
@@ -136,7 +136,7 @@ header {
   padding: 15px;
   margin-bottom: 20px;
   height: 100%;
-  background-color: #ecbd5e;
+  background-color: #f17713;
 }
 
 .card:hover {
@@ -169,7 +169,7 @@ header {
 .section-novedades {
   background-color: #224535;
   text-align: center;
-  color: #ecbd5e;
+  color: #f17713;
   padding: 20px;
 }
 
@@ -188,7 +188,7 @@ header {
 }
 
 .card-info {
-  border: 5px solid #ecbd5e;
+  border: 5px solid #f17713;
   padding: 10px;
   border-radius: 8px;
   color: #224535;
@@ -224,9 +224,22 @@ header {
 .container-ubi-img img {
   margin-right: 10px;
   height: 300px;
-  border: 5px solid #ecbd5e;
+  border: 5px solid #f17713;
 }
 
+
+
+/*? ---------------------------------------------------------------------------------------------------------*/
+/*! Estilos Quienes Somos */
+.section-sobreNos {
+  background-color: #f17713;
+  color: #224535;
+  font-weight: 500;
+}
+
+.section-sobreNos h2 {
+  font-style: italic;
+}
 
 
 /*? ---------------------------------------------------------------------------------------------------------*/
