--- a/css/estilo.css
+++ b/css/estilo.css
@@ -243,3 +243,31 @@ header {
 
 
 /*? ---------------------------------------------------------------------------------------------------------*/
+/*! Estilos GALERIA */
+
+.carousel-inner img {
+  max-height: 400px;
+  margin: 0 auto;
+  display: block;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  background-color: #f17713;
+  color: #224535;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  color: #224535;
+  border-radius: 50%;
+  padding: 12px;
+  font-size: 24px;
+}
