boton de wsp, responsive

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -295,3 +295,12 @@ p {
   color: #fff;
   font-size: 20px;
 }
+
+.boton-wsp {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 60px;
+  height: 60px;
+  font-size: 50px; 
+}
